--- a/about.html
+++ b/about.html
@@ -9,10 +9,21 @@
 <body>
     <header>
         <a href="index.html">Home</a>
-        <a href="">About</a>
-        <a href="">Resume</a>
-        <a href="">Portfolio</a>
-        <a href="">Contact</a>
+        <a href="about.html">About</a>
+        <a href="resume.html">Resume</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
     </header>
+    <h1>About</h1>
+    <div>
+        <h2>Post-Secondary Plan</h2>
+        <p>Lorem Ipsum</p>
+    </div>
+    <div>
+        <h2>Awards</h2>
+        <p>Lorem Ipsum</p>
+        <h2>Hobbies</h2>
+        <p>Lorem Ipsum</p>
+    </div>
 </body>
 </html>
