--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>My Home Page</title>
     <link rel="icon" href="images/circle.png">
 </head>
 <body>
     <section>
-        <a href="">About</a>
-        <a href="">Resume</a>
-        <a href="">About</a>
-        <a href="">Contact</a>
+        <a href="about.html">About</a>
+        <a href="resume.html">Resume</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
     </section>
     <section>Copy Paste A Brief Info Here</section>
 </body>
