--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
     </section>
-    <section>Copy Paste A Brief Info Here</section>
+    <section>
+        <h1>Title</h1>
+        <p>Lorem Ipsum</p>
+        <img src="" alt="">
+    </section>
 </body>
 </html>
