--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     </header>
     <h1>Portfolio</h1>
     <div>
-        <img src="" alt="">
+        <img src="images/king-removebg-preview 1.png" alt="">
         <div>
             <a href="programming.html">
                 <h2>Web/Programming</h2>
