--- a/writing.html
+++ b/writing.html
@@ -16,11 +16,11 @@
     </header>
     <h1>Writing</h1>
     <div>
-        <a href="">
-            <img src="" alt="">
+        <a href="file/1984_Research_Essay_assignment.pdf">
+            <img src="images/71rpa1-kyvL._AC_UF1000,1000_QL80_.jpg" alt="">
         </a>
-        <a href="">
-            <img src="" alt="">
+        <a href="file/Ready_Player_One_Essay.pdf">
+            <img src="images/91j9eAlIH+L.jpg" alt="">
         </a>
     </div>
 </body>
