--- a/programming.html
+++ b/programming.html
@@ -19,25 +19,25 @@
         <div>
             <h2>Web Design Practice</h2>
             <p>The objective of this repository is to copy a sample of a website as similar as possible when starting out.</p>
-            <img src="" alt="">
+            <img src="images/image 1.png" alt="">
             <a href="http://melodic-liger-3528f8.netlify.app">Link to Website</a>
         </div>
         <div>
             <h2>Certification</h2>
             <p>In this website, I made 3 template of certification that are printable in two orientation.</p>
-            <img src="" alt="">
+            <img src="images/image 2.png" alt="">
             <a href="http://silly-rolypoly-756ac5.netlify.app">Link to Website</a>
         </div>
         <div>
             <h2>Budget Calculator</h2>
             <p>There is a task about EECU to create a working budget calculator for clients to spend their financial better.</p>
-            <img src="" alt="">
+            <img src="images/image 3.png" alt="">
             <a href="http://papya-gnome-2baaf8.netlify.app">Link to Website</a>
         </div>
         <div>
             <h2>TRION</h2>
             <p>I work with people in a team of 4 to create a contract styled website for a company.</p>
-            <img src="" alt="">
+            <img src="images/image 4.png" alt="">
             <a href="http://d2mal-trion-2.netlify.app">Link to Website</a>
         </div>
     </div>
