--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Home Page</title>
     <link rel="icon" href="images/circle.png">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <section>
-        <a href="about.html">About</a>
-        <a href="resume.html">Resume</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
+    <section class="header">
+        <a href="about.html" id="about">About</a>
+        <a href="resume.html" id="resume">Resume</a>
+        <a href="portfolio.html" id="portfolio">Portfolio</a>
+        <a href="contact.html" id="contact">Contact</a>
     </section>
-    <section>
-        <h1>Title</h1>
-        <p>Lorem Ipsum</p>
+    <section class="main">
+        <h1 id="title">Greeting!</h1>
+        <p id="paragraph">Hello! Welcome to my website!</p>
         <img src="" alt="">
     </section>
+    <script src="index.js"></script>
 </body>
 </html>
