--- a/404.html
+++ b/404.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="icon" href="images/circle.png">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="404.css">
 </head>
 <body>
     <header>
