--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="icon" href="images/circle.png">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="contact.css">
 </head>
 <body>
     <header>
@@ -20,13 +22,13 @@
         <p>If there is a job or volunteer opportunities, I would like to code websites.</p>
         <p>Here are some ways you can contact or find me.</p>
     </div>
-    <div>
-        <div>
-            <img src="" alt="">
+    <div class="container">
+        <div class="refer">
+            <img src="images/g-mail-png 1.png" alt="">
             <a href="mailto:">email@email.com</a>
         </div>
-        <div>
-            <img src="" alt="">
+        <div class="refer">
+            <img src="images/linkedin 1.png" alt="">
             <a href="http://linkedin.com">linkedin</a>
         </div>
     </div>
