--- a/personal.html
+++ b/personal.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Work</title>
     <link rel="icon" href="images/circle.png">
+    <link rel="stylesheet" href="header.css">
 </head>
 <body>
     <header>
@@ -16,7 +17,9 @@
     </header>
     <div>
         <p>This is one sample of my personal work that I want to showcase.</p>
-        <img src="" alt="">
+        <a href="https://scintillating-cat-e6a557.netlify.app/">
+            <img src="" alt="">
+        </a>
     </div>
 </body>
 </html>
