--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Works</title>
     <link rel="icon" href="images/circle.png">
+    <link rel="stylesheet" href="header.css">
 </head>
 <body>
     <header>
