--- a/programming.html
+++ b/programming.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web and Programming Works</title>
     <link rel="icon" href="images/circle.png">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="programming.css">
 </head>
 <body>
     <header>
@@ -15,26 +17,26 @@
         <a href="contact.html">Contact</a>
     </header>
     <h1>Web/Programming</h1>
-    <div>
-        <div>
+    <div class="container">
+        <div class="box">
             <h2>Web Design Practice</h2>
             <p>The objective of this repository is to copy a sample of a website as similar as possible when starting out.</p>
             <img src="images/image 1.png" alt="">
             <a href="http://melodic-liger-3528f8.netlify.app">Link to Website</a>
         </div>
-        <div>
+        <div class="box">
             <h2>Certification</h2>
             <p>In this website, I made 3 template of certification that are printable in two orientation.</p>
             <img src="images/image 2.png" alt="">
             <a href="http://silly-rolypoly-756ac5.netlify.app">Link to Website</a>
         </div>
-        <div>
+        <div class="box">
             <h2>Budget Calculator</h2>
             <p>There is a task about EECU to create a working budget calculator for clients to spend their financial better.</p>
             <img src="images/image 3.png" alt="">
             <a href="http://papya-gnome-2baaf8.netlify.app">Link to Website</a>
         </div>
-        <div>
+        <div class="box">
             <h2>TRION</h2>
             <p>I work with people in a team of 4 to create a contract styled website for a company.</p>
             <img src="images/image 4.png" alt="">
