--- a/personal.html
+++ b/personal.html
@@ -6,6 +6,7 @@
     <title>Personal Work</title>
     <link rel="icon" href="images/circle.png">
     <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="personal.css">
 </head>
 <body>
     <header>
@@ -15,10 +16,11 @@
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
     </header>
+    <h1>Personal Work</h1>
     <div>
         <p>This is one sample of my personal work that I want to showcase.</p>
         <a href="https://scintillating-cat-e6a557.netlify.app/">
-            <img src="" alt="">
+            <img src="images/Screenshot_5-5-2025_10115_scintillating-cat-e6a557.netlify.app.jpeg" alt="">
         </a>
     </div>
 </body>
