--- a/writing.html
+++ b/writing.html
@@ -6,6 +6,7 @@
     <title>Writing Sample</title>
     <link rel="icon" href="images/circle.png">
     <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="writing.css">
 </head>
 <body>
     <header>
@@ -16,6 +17,7 @@
         <a href="contact.html">Contact</a>
     </header>
     <h1>Writing</h1>
+    <p>I wrote an essay about these two books.</p>
     <div>
         <a href="file/1984_Research_Essay_assignment.pdf">
             <img src="images/71rpa1-kyvL._AC_UF1000,1000_QL80_.jpg" alt="">
