--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     <title>Portfolio Works</title>
     <link rel="icon" href="images/circle.png">
     <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
     <header>
@@ -16,21 +17,23 @@
         <a href="contact.html">Contact</a>
     </header>
     <h1>Portfolio</h1>
-    <div>
-        <img src="images/king-removebg-preview 1.png" alt="">
-        <div>
-            <a href="programming.html">
-                <h2>Web/Programming</h2>
-                <img src="" alt="">
-            </a>
+    <div class="container">
+        <div class="box">
+            <img src="images/king-removebg-preview 1.png" alt="crown" class="crown">
+            <div>
+                <a href="programming.html">
+                    <h2>Web/Programming</h2>
+                    <img src="images/" alt="">
+                </a>
+            </div>
         </div>
-        <div>
+        <div class="box">
             <a href="writing.html">
                 <h2>Writing</h2>
                 <img src="" alt="">
             </a>
         </div>
-        <div>
+        <div class="box">
             <a href="personal.html">
                 <h2>Personal Work</h2>
                 <img src="" alt="">
