--- a/contact.html
+++ b/contact.html
@@ -25,11 +25,11 @@
     <div class="container">
         <div class="refer">
             <img src="images/g-mail-png 1.png" alt="">
-            <a href="mailto:">email@email.com</a>
+            <a href="mailto:">Email</a>
         </div>
         <div class="refer">
             <img src="images/linkedin 1.png" alt="">
-            <a href="http://linkedin.com">linkedin</a>
+            <a href="http://linkedin.com">Linkedin</a>
         </div>
     </div>
 </body>
