--- a/portfolio.html
+++ b/portfolio.html
@@ -20,23 +20,23 @@
     <div class="container">
         <div class="box">
             <img src="images/king-removebg-preview 1.png" alt="crown" class="crown">
-            <div>
+            <div class="square yellow">
                 <a href="programming.html">
                     <h2>Web/Programming</h2>
-                    <img src="images/" alt="">
+                    <img src="images/icon1.png" alt="">
                 </a>
             </div>
         </div>
-        <div class="box">
+        <div class="square red">
             <a href="writing.html">
                 <h2>Writing</h2>
-                <img src="" alt="">
+                <img src="images/icon2.png" alt="">
             </a>
         </div>
-        <div class="box">
+        <div class="square red">
             <a href="personal.html">
                 <h2>Personal Work</h2>
-                <img src="" alt="">
+                <img src="images/icon3-removebg-preview.png" alt="">
             </a>
         </div>
     </div>
