--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <title>About</title>
     <link rel="icon" href="images/circle.png">
     <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="about.css">
 </head>
 <body>
     <header>
@@ -16,15 +17,21 @@
         <a href="contact.html">Contact</a>
     </header>
     <h1>About</h1>
-    <div>
-        <h2>Post-Secondary Plan</h2>
-        <p>Lorem Ipsum</p>
-    </div>
-    <div>
-        <h2>Awards</h2>
-        <p>Lorem Ipsum</p>
-        <h2>Hobbies</h2>
-        <p>Lorem Ipsum</p>
+    <div class="container">
+        <div class="box">
+            <h2>Post-Secondary Plan</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="col">
+            <div class="box">
+                <h2>Awards</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <div class="box">
+                <h2>Hobbies</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
