--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,7 @@
     <title>Resume</title>
     <link rel="icon" href="images/circle.png">
     <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="resume.css">
 </head>
 <body>
     <header>
@@ -16,44 +17,46 @@
         <a href="contact.html">Contact</a>
     </header>
     <h1>Resume</h1>
-    <div>
-        <div>
+    <div class="container">
+        <div class="rectangle">
             <p>Full Name</p>
         </div>
-        <div>
-            <div>
-                <img src="" alt="">
-                <a href="mailto:">email@email.com</a>
-                <a href="tel:+">123-456-7890</a>
-                <a href="https://github.com">github.com</a>
-                <a href="http://linkedin.com">linkedin</a>
-            </div>
-            <div>
-                <h2>Education</h2>
-                <p>High School</p>
-                <p>McLane High School</p>
-                <p>2021-2025</p>
-                <ul>
-                    <li>Classes</li>
-                </ul>
-                <p>CART</p>
-                <p>2024-2025</p>
-                <p>Web Application</p>
-            </div>
-            <div>
-                <h2>Skills</h2>
-                <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                </ul>
-            </div>
-            <div>
-                <h2>Achievements</h2>
-                <p>Achievements</p>
+        <div class="info">
+            <div class="left">
+                <div class="col">
+                    <img src="images/1c47f6243a654bc994e877a1c97dd085-removebg-preview 1.png" alt="">
+                    <a href="mailto:">email@email.com</a>
+                    <a href="tel:+">123-456-7890</a>
+                    <a href="https://github.com">github.com</a>
+                    <a href="http://linkedin.com">linkedin</a>
+                </div>
+                <div>
+                    <h2>Education</h2>
+                    <p>High School</p>
+                    <p>McLane High School</p>
+                    <p>2021-2025</p>
+                    <ul>
+                        <li>Classes</li>
+                    </ul>
+                    <p>CART</p>
+                    <p>2024-2025</p>
+                    <p>Web Application</p>
+                </div>
+                <div>
+                    <h2>Skills</h2>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Achievements</h2>
+                    <p>Achievements</p>
+                </div>
             </div>
         </div>
-        <div>
+        <div class="right">
             <div>
                 <p>I am passionate about coding and looking forward to creating websites for the future. I have a lot of experiences in coding throughout the year.</p>
             </div>
@@ -89,8 +92,8 @@
             </div>
         </div>
     </div>
-    <div>
+    <a class="copy" href="file/Resume.pdf">
         <p>Get a Copy</p>
-    </div>
+    </a>
 </body>
 </html>
