--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,12 @@
     <link rel="icon" href="images/circle.png">
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="canvas.css">
+    <link rel="stylesheet" href="cursor.css">
 </head>
 <body>
+    <div class="cursor"></div>
+    <canvas></canvas>
     <header>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -32,5 +36,7 @@
             <a href="http://linkedin.com">Linkedin</a>
         </div>
     </div>
+    <script src="background.js"></script>
+    <script src="cursor.js"></script>
 </body>
 </html>
