--- a/programming.html
+++ b/programming.html
@@ -7,8 +7,12 @@
     <link rel="icon" href="images/circle.png">
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="programming.css">
+    <link rel="stylesheet" href="canvas.css">
+    <link rel="stylesheet" href="cursor.css">
 </head>
 <body>
+    <div class="cursor"></div>
+    <canvas></canvas>
     <header>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -43,5 +47,7 @@
             <a href="http://d2mal-trion-2.netlify.app">Link to Website</a>
         </div>
     </div>
+    <script src="background.js"></script>
+    <script src="cursor.js"></script>
 </body>
 </html>
