--- a/resume.html
+++ b/resume.html
@@ -7,8 +7,10 @@
     <link rel="icon" href="images/circle.png">
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="resume.css">
+    <link rel="stylesheet" href="cursor.css">
 </head>
 <body>
+    <div class="cursor"></div>
     <header>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -95,5 +97,6 @@
     <a class="copy" href="file/Resume.pdf">
         <p>Get a Copy</p>
     </a>
+    <script src="cursor.js"></script>
 </body>
 </html>
