--- a/404.html
+++ b/404.html
@@ -4,21 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="icon" href="images/circle.png">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="404.css">
+    <link rel="icon" href="/images/circle.png">
+    <link rel="stylesheet" href="/header.css">
+    <link rel="stylesheet" href="/404.css">
+    <link rel="stylesheet" href="/canvas.css">
+    <link rel="stylesheet" href="/cursor.css">
 </head>
 <body>
+    <div class="cursor"></div>
+    <canvas></canvas>
     <header>
-        <a href="index.html">Home</a>
-        <a href="">About</a>
-        <a href="">Resume</a>
-        <a href="">Portfolio</a>
-        <a href="">Contact</a>
+        <a href="/index.html">Home</a>
+        <a href="/about.html">About</a>
+        <a href="/resume.html">Resume</a>
+        <a href="/portfolio.html">Portfolio</a>
+        <a href="/contact.html">Contact</a>
     </header>
     <section>
         <h1>404</h1>
         <h2>Invalid Page</h2>
     </section>
+    <script src="/background.js"></script>
+    <script src="/cursor.js"></script>
 </body>
 </html>
