--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <title>My Home Page</title>
     <link rel="icon" href="images/circle.png">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="canvas.css">
+    <link rel="stylesheet" href="cursor.css">
 </head>
 <body>
+    <div class="cursor"></div>
+    <canvas></canvas>
     <section class="header">
         <a href="about.html" id="about">About</a>
         <a href="resume.html" id="resume">Resume</a>
@@ -20,5 +24,7 @@
         <img src="" alt="">
     </section>
     <script src="index.js"></script>
+    <script src="background.js"></script>
+    <script src="cursor.js"></script>
 </body>
 </html>
