--- a/personal.html
+++ b/personal.html
@@ -7,8 +7,12 @@
     <link rel="icon" href="images/circle.png">
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="personal.css">
+    <link rel="stylesheet" href="canvas.css">
+    <link rel="stylesheet" href="cursor.css">
 </head>
 <body>
+    <div class="cursor"></div>
+    <canvas></canvas>
     <header>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -23,5 +27,7 @@
             <img src="images/Screenshot_5-5-2025_10115_scintillating-cat-e6a557.netlify.app.jpeg" alt="">
         </a>
     </div>
+    <script src="background.js"></script>
+    <script src="cursor.js"></script>
 </body>
 </html>
