--- a/writing.html
+++ b/writing.html
@@ -7,8 +7,12 @@
     <link rel="icon" href="images/circle.png">
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="writing.css">
+    <link rel="stylesheet" href="canvas.css">
+    <link rel="stylesheet" href="cursor.css">
 </head>
 <body>
+    <div class="cursor"></div>
+    <canvas></canvas>
     <header>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -26,5 +30,7 @@
             <img src="images/91j9eAlIH+L.jpg" alt="">
         </a>
     </div>
+    <script src="background.js"></script>
+    <script src="cursor.js"></script>
 </body>
 </html>
