--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <a href="contact.html" id="contact">Contact</a>
     </section>
     <section class="main">
-        <h1 id="title">Greeting!</h1>
-        <p id="paragraph">Hello! Welcome to my website!</p>
+        <h1 id="title">Hello!</h1>
+        <p id="paragraph">Welcome to my website! Feel free to explore and discover about me!</p>
         <img src="" alt="">
     </section>
     <script src="index.js"></script>
