--- a/404.html
+++ b/404.html
@@ -14,11 +14,18 @@
     <div class="cursor"></div>
     <canvas></canvas>
     <header>
-        <a href="/index.html">Home</a>
-        <a href="/about.html">About</a>
-        <a href="/resume.html">Resume</a>
-        <a href="/portfolio.html">Portfolio</a>
-        <a href="/contact.html">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="resume.html">Resume</a>
+        <div class="dropdown">
+            <a class="dropdwn-button" href="portfolio.html">Portfolio</a>
+            <div class="dropdown-content">
+                <a href="programming.html">Programming/Web</a>
+                <a href="writing.html">Writing</a>
+                <a href="personal.html">Personal</a>
+            </div>
+        </div>
+        <a href="contact.html">Contact</a>
     </header>
     <section>
         <h1>404</h1>
