--- a/personal.html
+++ b/personal.html
@@ -17,11 +17,18 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="resume.html">Resume</a>
-        <a href="portfolio.html">Portfolio</a>
+        <div class="dropdown">
+            <a class="dropdwn-button" href="portfolio.html">Portfolio</a>
+            <div class="dropdown-content">
+                <a href="programming.html">Programming/Web</a>
+                <a href="writing.html">Writing</a>
+                <a href="personal.html">Personal</a>
+            </div>
+        </div>
         <a href="contact.html">Contact</a>
     </header>
     <h1>Personal Work</h1>
-    <div>
+    <div class="container">
         <p>This is one sample of my personal work that I want to showcase.</p>
         <a href="https://scintillating-cat-e6a557.netlify.app/">
             <img src="images/Screenshot_5-5-2025_10115_scintillating-cat-e6a557.netlify.app.jpeg" alt="">
