--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,14 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="resume.html">Resume</a>
-        <a href="portfolio.html">Portfolio</a>
+        <div class="dropdown">
+            <a class="dropdwn-button" href="portfolio.html">Portfolio</a>
+            <div class="dropdown-content">
+                <a href="programming.html">Programming/Web</a>
+                <a href="writing.html">Writing</a>
+                <a href="personal.html">Personal</a>
+            </div>
+        </div>
         <a href="contact.html">Contact</a>
     </header>
     <h1>Resume</h1>
@@ -33,7 +40,7 @@
                     <a href="http://linkedin.com">linkedin</a>
                 </div>
                 <div>
-                    <h2>Education</h2>
+                    <h2 class="side-header">Education</h2>
                     <p>High School</p>
                     <p>McLane High School</p>
                     <p>2021-2025</p>
@@ -45,7 +52,7 @@
                     <p>Web Application</p>
                 </div>
                 <div>
-                    <h2>Skills</h2>
+                    <h2 class="side-header">Skills</h2>
                     <ul>
                         <li>HTML</li>
                         <li>CSS</li>
@@ -53,7 +60,7 @@
                     </ul>
                 </div>
                 <div>
-                    <h2>Achievements</h2>
+                    <h2 class="side-header">Achievements</h2>
                     <p>Achievements</p>
                 </div>
             </div>
