--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,14 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="resume.html">Resume</a>
-        <a href="portfolio.html">Portfolio</a>
+        <div class="dropdown">
+            <a class="dropdwn-button" href="portfolio.html">Portfolio</a>
+            <div class="dropdown-content">
+                <a href="programming.html">Programming/Web</a>
+                <a href="writing.html">Writing</a>
+                <a href="personal.html">Personal</a>
+            </div>
+        </div>
         <a href="contact.html">Contact</a>
     </header>
     <h1>Portfolio</h1>
