--- a/programming.html
+++ b/programming.html
@@ -17,37 +17,54 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="resume.html">Resume</a>
-        <a href="portfolio.html">Portfolio</a>
+        <div class="dropdown">
+            <a class="dropdwn-button" href="portfolio.html">Portfolio</a>
+            <div class="dropdown-content">
+                <a href="programming.html">Programming/Web</a>
+                <a href="writing.html">Writing</a>
+                <a href="personal.html">Personal</a>
+            </div>
+        </div>
         <a href="contact.html">Contact</a>
     </header>
     <h1>Web/Programming</h1>
-    <div class="container">
-        <div class="box">
-            <h2>Web Design Practice</h2>
-            <p>The objective of this repository is to copy a sample of a website as similar as possible when starting out.</p>
-            <img src="images/image 1.png" alt="">
-            <a href="http://melodic-liger-3528f8.netlify.app">Link to Website</a>
-        </div>
-        <div class="box">
-            <h2>Certification</h2>
-            <p>In this website, I made 3 template of certification that are printable in two orientation.</p>
-            <img src="images/image 2.png" alt="">
-            <a href="http://silly-rolypoly-756ac5.netlify.app">Link to Website</a>
-        </div>
-        <div class="box">
-            <h2>Budget Calculator</h2>
-            <p>There is a task about EECU to create a working budget calculator for clients to spend their financial better.</p>
-            <img src="images/image 3.png" alt="">
-            <a href="http://papya-gnome-2baaf8.netlify.app">Link to Website</a>
-        </div>
-        <div class="box">
-            <h2>TRION</h2>
-            <p>I work with people in a team of 4 to create a contract styled website for a company.</p>
-            <img src="images/image 4.png" alt="">
-            <a href="http://d2mal-trion-2.netlify.app">Link to Website</a>
-        </div>
+    <div class="slideshow-container">
+        <a href="http://melodic-liger-3528f8.netlify.app" class="mySlides fade">
+            <div class="numbertext">1 / 4</div>
+            <img src="images/image 1.png" style="width:100%">
+            <div class="text">http://melodic-liger-3528f8.netlify.app</div>
+        </a>
+        <a href="http://silly-rolypoly-756ac5.netlify.app" class="mySlides fade">
+            <div class="numbertext">2 / 4</div>
+            <img src="images/image 2.png" style="width:100%">
+            <div class="text">http://silly-rolypoly-756ac5.netlify.app</div>
+        </a>
+        <a href="http://papya-gnome-2baaf8.netlify.app" class="mySlides fade">
+            <div class="numbertext">3 / 4</div>
+            <img src="images/image 3.png" style="width:100%">
+            <div class="text">http://papya-gnome-2baaf8.netlify.app</div>
+        </a>
+        <a href="http://d2mal-trion-2.netlify.app" class="mySlides fade">
+            <div class="numbertext">4 / 4</div>
+            <img src="images/image 4.png" style="width:100%;">
+            <div class="text">http://d2mal-trion-2.netlify.app</div>
+        </a>
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br>
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+    </div>
+    <div class="wil">
+        <h2>Takeaways</h2>
+        <p id="takeaway">test</p>
     </div>
     <script src="background.js"></script>
     <script src="cursor.js"></script>
+    <script src="programming.js"></script>
 </body>
 </html>
