--- a/writing.html
+++ b/writing.html
@@ -17,12 +17,19 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="resume.html">Resume</a>
-        <a href="portfolio.html">Portfolio</a>
+        <div class="dropdown">
+            <a class="dropdwn-button" href="portfolio.html">Portfolio</a>
+            <div class="dropdown-content">
+                <a href="programming.html">Programming/Web</a>
+                <a href="writing.html">Writing</a>
+                <a href="personal.html">Personal</a>
+            </div>
+        </div>
         <a href="contact.html">Contact</a>
     </header>
     <h1>Writing</h1>
     <p>I wrote an essay about these two books.</p>
-    <div>
+    <div class="container">
         <a href="file/1984_Research_Essay_assignment.pdf">
             <img src="images/71rpa1-kyvL._AC_UF1000,1000_QL80_.jpg" alt="">
         </a>
