--- a/about.html
+++ b/about.html
@@ -31,16 +31,16 @@
     <div class="container">
         <div class="box">
             <h2>Post-Secondary Plan</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>After my graduation, I plan on attention Clovis Community College to continue my path to programming. By continuing my path to program more, I can create software to help people's every day needs.</p>
         </div>
         <div class="col">
             <div class="box">
                 <h2>Awards</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>I have very few awards. One of them is OSHA certification from passing the test online. Another award that I am about to get is a High School Diploma because I am a 2025 Grads.</p>
             </div>
             <div class="box">
                 <h2>Hobbies</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Whenever I do an activity that requires calculation or to prepare a future task, I create a mini-project about that activity.</p>
             </div>
         </div>
     </div>
