--- a/programming.html
+++ b/programming.html
@@ -61,7 +61,7 @@
     </div>
     <div class="wil">
         <h2>Takeaways</h2>
-        <p id="takeaway">test</p>
+        <p id="takeaway">I learned how to stylize better with the CSS code on Visual Studio Code from how to layout website to make it look professional. After I coded this website, I understand better about the function of display: flex.</p>
     </div>
     <script src="background.js"></script>
     <script src="cursor.js"></script>
