--- a/contact.html
+++ b/contact.html
@@ -35,12 +35,12 @@
     </div>
     <div class="container">
         <div class="refer">
-            <img src="images/g-mail-png 1.png" alt="">
-            <a href="mailto:">Email</a>
+            <img src="images/g-mail-png 1.png" alt="Email Logo">
+            <a href="mailto:">Email Me</a>
         </div>
         <div class="refer">
-            <img src="images/linkedin 1.png" alt="">
-            <a href="http://linkedin.com">Linkedin</a>
+            <img src="images/linkedin 1.png" alt="Linkedin Logo">
+            <a href="http://linkedin.com">My Linkedin</a>
         </div>
     </div>
     <script src="background.js"></script>
