--- a/resume.html
+++ b/resume.html
@@ -28,16 +28,17 @@
     <h1>Resume</h1>
     <div class="container">
         <div class="rectangle">
-            <p>Full Name</p>
+            <p>Devin Silkeutsabay</p>
         </div>
         <div class="info">
             <div class="left">
                 <div class="col">
                     <img src="images/1c47f6243a654bc994e877a1c97dd085-removebg-preview 1.png" alt="">
-                    <a href="mailto:">email@email.com</a>
-                    <a href="tel:+">123-456-7890</a>
-                    <a href="https://github.com">github.com</a>
-                    <a href="http://linkedin.com">linkedin</a>
+                    <a href="mailto:">devin.silkeutsabay24@<br>student.cart.org</a>
+                    <br/>
+                    <!-- <a href="tel:+">123-456-7890</a> -->
+                    <a href="https://github.com">github.com/dev-aspiringvibrant</a>
+                    <!-- <a href="http://linkedin.com">linkedin</a> -->
                 </div>
                 <div>
                     <h2 class="side-header">Education</h2>
@@ -45,7 +46,8 @@
                     <p>McLane High School</p>
                     <p>2021-2025</p>
                     <ul>
-                        <li>Classes</li>
+                        <li>Chicano Studies</li>
+                        <li>U.S. History</li>
                     </ul>
                     <p>CART</p>
                     <p>2024-2025</p>
@@ -61,7 +63,7 @@
                 </div>
                 <div>
                     <h2 class="side-header">Achievements</h2>
-                    <p>Achievements</p>
+                    <p>OSHA Certification</p>
                 </div>
             </div>
         </div>
@@ -93,7 +95,7 @@
                         <p>2023-2024</p>
                     </div>
                     <div>
-                        <p>School Name</p>
+                        <p>Mclane High School</p>
                         <p>Food Closet</p>
                         <p>Food distribution every first Saturday of the month.</p>
                     </div>
