--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <a href="contact.html" id="contact">Contact</a>
     </section>
     <section class="main">
-        <h1 id="title">Hello!</h1>
+        <h1 id="title">Hello,</h1>
+        <h2>I'm Devin Silkeutsabay!</h2>
         <p id="paragraph">Welcome to my website! Feel free to explore and discover about me!</p>
         <img src="" alt="">
     </section>
