--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,10 @@
             <a href="mailto:">Email Me</a>
         </div>
         <div class="refer">
+            <img src="images/github.png" alt="Github logo">
+            <a href="https://github.com/dev-aspiringvibrant">Github Profile</a>
+        </div>
+        <div class="refer">
             <img src="images/linkedin 1.png" alt="Linkedin Logo">
             <a href="http://linkedin.com">My Linkedin</a>
         </div>
